tests/conformance/typecheck/valid/extern_fun_parametric.ks
extern fun get<V>(x: V): V = jvm("kestrel.runtime.KRuntime#formatOne(java.lang.Object)")
fun forceString(x: String): String = x
val s = forceString(get("ok"))
